Wed Jun 06 09:39:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * TAO_IDL/util/utl_scope.cpp:

          Corrects an issue with the wrong error message being
          generated for missing definitions within local modules.
          (Which exposed a lock-up problem.)

          Corrects the tao_idl lock-up that could occur during the
          look-up of certain identifiers within local modules, and
          put a stop to the non-CORBA compliance of searching in
          parent scope for identifiers that were not found within
          local modules. (Now displays a helpful diagnostic instead
          of generating non-complient code.)

Tue Jun  5 21:10:24 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * orbsvcs/examples/Notify/Federation/SpaceCraft/SpaceCraft.cpp:
        * orbsvcs/orbsvcs/Trader/Constraint_y.cpp:
        * tests/Bug_2560_Regression/Stock_Factory_i.cpp:
          Corrected header includes order. This fixes log2 API not being
          found errors on VxWorks6.4 RTI builds.

Tue Jun  5 18:56:16 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/Event/ECG_Mcast_EH.cpp:
        * orbsvcs/orbsvcs/Event/ECG_UDP_Sender.cpp:
        * orbsvcs/orbsvcs/RtecUDPAdmin.idl:
        * orbsvcs/tests/EC_MT_Mcast/AddrServer.cpp:

          The enum added to RtecUDPAdmin.idl contained "INET" which
          apparently collided with a '#define INET' on some VxWorks build
          environments. To avoid this collision, the enum values have been
          renamed. Thanks to Martin Corino for finding the cause of this
          build problem on VxWorks.

Tue Jun  5 13:23:04 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/nested_scope.idl:

          Commented out a line that has been determined by Simon Massey
          <simon dot massey at prismtech dot com> to be melformed IDL.

Mon Jun  4 22:40:13 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>
